# pearpy

./: .gitignore  MANIFEST  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml  python-package.yml
pear/: pear.py  pear_thread.py  test_pear.py
pearpy/: pear.py  pear_thread.py
test/: benchmark.py
tests/: benchmark.py  example.py  test_pear.py
