[tool.poetry]
name = "pear"
version = "0.1.0"
description = ""
authors = ["aidenszeto <aszeto35@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
twine = "^3.4.2"
"keyrings.alt" = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
